2004-03-05  Tor Lillqvist  <tml@iki.fi>

	* glib/glib.def: Add g_main_depth. (#136221, Cedric Gustin)

2004-03-04  Guntupalli Karunakar  <karunakar@freedomink.org>

	* configure.in: Added "pa" (Punjabi) to ALL_LINGUAS.

2004-03-04  Sebastian Wilhelmi  <seppi@seppi.de>

	* glib/gmain.c: Use the atomic integer operations for GMainContext
	and GMainLoop reference counting.

	* glib/gmain.c: Hold the main_context_list lock, when iterating
	the list. Only call g_main_context_wakeup for positive reference
	count.

2004-03-03  Tor Lillqvist  <tml@iki.fi>

	* glibconfig.h.win32.in: Update to match a configure-generated
	glibconfig.h. Specifically: Remove G_{MIN,MAX,MAXU}INT64
	definitions (now in gtypes.h). Remove g_once and
	g_static_mutex_get_mutex_impl_shortcut definitions (now in
	gthread.h).

	* tests/child-test.c: Use a macro GPID_FORMAT for the format to
	print GPid in (%p on Win32, %d on Unix). Maybe configure.in should
	place that in glibconfig.h?

	Print verbose error message if CreateProcess() fails.

	Don't close the child handle until in the child watch callback.

	Don't try to run /bin/true on Win32. Run ipconfig instead (just to
	pick a program that should exist on all Window boxes).

2004-03-02  Sebastian Wilhelmi  <seppi@seppi.de>

	* glib/gatomic.c: Fixed missing definition for ppc code. Fix by
	Mark McLoughlin <mark@skynet.ie>.

Mon Mar  1 16:49:51 2004  Owen Taylor  <otaylor@redhat.com>

	* === Released 2.3.5 ===

	* configure.in: Version 2.3.5, interface ago 0.

	* NEWS: Some further updates.

Mon Mar  1 15:49:09 2004  Owen Taylor  <otaylor@redhat.com>

	* glib/gmain.c (check_for_child_exited): Don't
	call waitpid() on a source that has already exited.

	* glib/gmain.c (g_child_watch_check): Return TRUE
	only if the child actually exited.

Mon Mar  1 15:39:57 2004  Owen Taylor  <otaylor@redhat.com>

       Patch from J. Ali Harlow

	* configure.in: Use void * not HANDLE for GPid on win32.

	* glib/gspawn.[ch] glib/gspawn-win32.[ch] glib/glib.def: 