@@ -32,6 +32,7 @@ void _g_messages_thread_init (void);
 void _g_convert_thread_init (void);
 void _g_rand_thread_init (void);
 void _g_main_thread_init (void);
+void _g_atomic_thread_init (void);
 
 /* Are called from glib/gthread.c. Must only contain g_private_new calls */
 void _g_mem_thread_private_init (void);
